# trackingscanner

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt  scan_job.py  scan_master.py  scan_worker.py  scanner.py  scanner_config.py  scanner_extractors.py  scanner_finalize.py  scanner_network.py  utils.py  website_scanner.py
extractors/: __init__.py  base.py  cookies.py  failedrequests.py  fb_pixel.py  fbpixel.py  fingerprinting.py  googleanalytics.py  localstorage.py  requests.py  sessionrecorders.py  thirdparties.py  tiktokpixel.py  trackerdetect.py  twitterpixel.py
resources/: easylist.txt  easyprivacy.txt  session_recorders.json
scanner_tools/: __init__.py  cmp.py  extractors.py  finalize.py  network.py  results.py
trackingscanner/: __init__.py  api.py
